--- a/web/packages/sequence/css/src/_required.scss
+++ b/web/packages/sequence/css/src/_required.scss
@@ -27,6 +27,9 @@ $border-radius-small:           0;
 $btn-default-color:             $theme-button-font-color;
 $btn-default-bg:                $theme-button-bg-color;
 $btn-default-border:            $theme-button-bg-color;
+$btn-primary-color:             $theme-dark-color;
+$btn-primary-bg:                $theme-highlight-color;
+$btn-primary-border:            $theme-highlight-color;
 
 $input-bg:                      $theme-input-bg-color;
 $input-border:                  $theme-input-bg-color;
