--- a/web/packages/sequence/css/src/elements/masthead.scss
+++ b/web/packages/sequence/css/src/elements/masthead.scss
@@ -2,7 +2,7 @@
   .node {display:table;visibility:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:70% 50%;
     &:first-of-type {visibility:visible;opacity:1;}
   }
-  .inner {width:100%;height:100%;display:table-cell;vertical-align:bottom;text-align:left;padding-bottom:2rem;}
+  .inner {width:100%;height:100%;display:table-cell;vertical-align:bottom;text-align:left;padding-bottom:4rem;}
   .node-content {font-size:1.3rem;display:inline-block;max-width:90%;padding-left:2rem;}
   a {color:inherit;
     &:hover {text-decoration:underline;}
@@ -14,8 +14,8 @@
   }
 
   // Navigation arrows
-  .arrows {color:$theme-light-color;position:absolute;top:100%;font-size:4rem;padding:0;line-height:1;@include transform(translateY(-100%));@include transition(all 0.25s ease);z-index:1;
-    &:hover {color:lighten($theme-light-color, 12%);text-decoration:none;}
+  .arrows {color:#fff !important;position:absolute;top:100%;font-size:4rem;padding:0;line-height:1;cursor:pointer;@include transform(translateY(-100%));@include transition(all 0.25s ease);z-index:1;
+    &:hover {color:lighten($theme-light-color, 12%) !important;text-decoration:none;}
     &[class*="left"]{left:0;
       &:hover {padding-left:0.25rem;}
     }
@@ -25,17 +25,17 @@
   }
   // Markers
   .markers {position:absolute;left:0;right:0;bottom:0;width:100%;text-align:center;padding:1rem;font-size:0;line-height:0;
-    a {color:$theme-light-color;display:inline-block;padding:0.25rem;font-size:14px;line-height:1;
-      &:hover, &.active {color:$theme-dark-color;text-decoration:none;}
+    a {color:$theme-light-color !important;display:inline-block;padding:0.25rem;font-size:14px;line-height:1;
+      &:hover, &.active {color:$theme-highlight-color !important;text-decoration:none;}
     }
   }
 }
 
 @media screen and (min-width:$screen-sm){
   [masthead] {color:$theme-font-color;
-    .inner {vertical-align:middle;padding-top:0;}
+    .inner {vertical-align:middle;padding-top:0;padding-bottom:2rem;}
     .node-content {padding-left:7rem;max-width:75%;}
-    .arrows {font-size:5rem;top:50%;}
+    .arrows {font-size:5rem;top:50%;@include transform(translateY(-50%));}
   }
 }
 
