--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -111,9 +111,9 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;}
 // Page Type News
 .pt-news {
   #c-level-1 {
-    .pseudo-header {padding-top:7rem;margin-bottom:2rem;
-      h1 {padding-bottom:1.5rem;margin:0;border-bottom:1px solid darken($theme-light-color, 40%);}
-    }
+//    .pseudo-header {padding-top:7rem;margin-bottom:2rem;
+//      h1 {padding-bottom:1.5rem;margin:0;border-bottom:1px solid darken($theme-light-color, 40%);}
+//    }
     //section, section:last-of-type {padding:1rem 0;background:transparent;height:auto;width:100%;}
   }
 }
