--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -111,13 +111,12 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;
   }
 }
 
-// Page Type News
-.pt-news {
-  #c-level-1 {
-//    .pseudo-header {padding-top:7rem;margin-bottom:2rem;
-//      h1 {padding-bottom:1.5rem;margin:0;border-bottom:1px solid darken($theme-light-color, 40%);}
-//    }
-    //section, section:last-of-type {padding:1rem 0;background:transparent;height:auto;width:100%;}
+.featured-news-items,
+#c-level-1 .featured-news-items {
+  .news-item {text-align:left;display:block;text-decoration:none !important;
+    img {padding:0 0 1rem;margin:0;}
+    h2 {font-size:100%;padding:0 0 0.75rem;text-align:inherit;}
+    p {margin:0;padding:0;color:$theme-light-color;}
   }
 }
 
