--- a/web/packages/sequence/css/app.css
+++ b/web/packages/sequence/css/app.css
@@ -333,7 +333,7 @@ img {
     position: relative; }
     #c-level-1 section:first-of-type {
       padding: 0;
-      height: 100%;
+      /*height:100%;*/
       width: 100%;
       position: relative;
       background: #222222; }
@@ -385,7 +385,7 @@ img {
           text-align: center;
           color: #222222; }
           #c-level-1 section:first-of-type .tabular .cellular .homepage-intro {
-            padding: 2.5rem;
+            padding: 4.5rem 2.5rem;
             width: 100%;
             max-width: 992px;
             margin: 0 auto;
@@ -396,9 +396,6 @@ img {
               text-decoration: underline; }
             #c-level-1 section:first-of-type .tabular .cellular .homepage-intro ul:last-of-type {
               margin-bottom: 0; }
-      @media screen and (min-width: 480px) {
-        #c-level-1 section:first-of-type {
-          max-height: 60%; } }
   #c-level-1 footer {
     font-size: 14px;
     display: block;
