--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -62,7 +62,11 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;
   @todo: themable first-of-type and last-of-type sections
   **********************************************************************/
   section {padding:$theme-section-spacing 0;overflow:hidden;position:relative;
-    &:first-of-type {padding:0;height:100%;width:100%;position:relative;background:$theme-dark-color;}
+    // @notice: with background imagery, we want to enforce a minimum percentage of the screen height so the pictures
+    // look OK. With just text (making it an orange bar only), we want to just set some padding and around the text
+    // and let it flow to whatever height is appropriate depending on the text wrapping. So uncomment /*height:...*/
+    // if we go back to pictures.
+    &:first-of-type {padding:0;/*height:100%;*/width:100%;position:relative;background:$theme-dark-color;}
     &:last-of-type {padding-top:$theme-section-spacing/2;}
     h2 {text-align:center;margin:0;padding:2rem 1rem 3rem;text-transform:uppercase;}
     [class*="wrap-"]{margin:-$theme-section-spacing 0;padding:$theme-section-spacing 0;background-size:cover;background-position:50% 100%;background-attachment:fixed;}
@@ -79,15 +83,11 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;
     &:first-of-type {padding-top:66px;/*max-height:60%;*/background:none;
       .tabular {display:table;width:100%;height:100%;background:$theme-highlight-color;
         .cellular {display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;color:$theme-dark-color;
-          .homepage-intro {padding:2.5rem;width:100%;max-width:$screen-md;margin:0 auto;text-align:left;display:inline-block;
+          .homepage-intro {padding:4.5rem 2.5rem;width:100%;max-width:$screen-md;margin:0 auto;text-align:left;display:inline-block;
             a {color:$theme-dark-color !important;text-decoration:underline;}
             ul:last-of-type {margin-bottom:0;}
           }
         }
-      }
-
-      @media screen and (min-width:$screen-xs){
-        max-height:60%;
       }
     }
   }
