--- a/web/packages/sequence/css/src/app.scss
+++ b/web/packages/sequence/css/src/app.scss
@@ -82,8 +82,9 @@ img {@include img-responsive(inline-block);padding-bottom:0.75rem;
     // Modified mast-header: setting to max-height 50%, background orange
     &:first-of-type {padding-top:66px;/*max-height:60%;*/background:none;
       .tabular {display:table;width:100%;height:100%;background:$theme-highlight-color;
-        .cellular {display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;color:$theme-dark-color;
-          .homepage-intro {padding:4.5rem 2.5rem;width:100%;max-width:$screen-md;margin:0 auto;text-align:left;display:inline-block;
+        .cellular {position:relative;display:table-cell;width:100%;height:100%;vertical-align:middle;text-align:center;color:$theme-dark-color;
+          &::before {display:block;content:'';top:0;right:0;bottom:0;left:0;position:absolute;background:url('#{$image-path}/diagonal_stripe.png');opacity:0.7;}
+          .homepage-intro {padding:4.5rem 2.5rem;width:100%;max-width:$screen-md;margin:0 auto;text-align:left;display:inline-block;position:relative;z-index:1;
             a {color:$theme-dark-color !important;text-decoration:underline;}
             ul:last-of-type {margin-bottom:0;}
           }
